[package]
name = "kanidm-hsm-crypto"
description = "A library for easily interacting with a HSM or TPM"
version = "0.1.5"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/kanidm/hsm-crypto/"
repository = "https://github.com/kanidm/hsm-crypto/"
authors = ["William Brown <william@blackhats.net.au>"]

[features]
# default = ["tpm"]
tpm = ["dep:tss-esapi"]

# tss-esapi = { path = "../rust-tss-esapi/tss-esapi" }

[dependencies]
argon2 = { version = "0.5.2", features = ["alloc"] }
hex = "0.4.3"
openssl = "^0.10.57"
serde = { version = "^1.0", features = ["derive"] }
tracing = "^0.1.37"
tss-esapi = { version = "^7.4.0", optional = true }
zeroize = "1.6.0"

[dev-dependencies]
tracing-subscriber = "^0.3.17"


